--- a/css/daddyowebsite1260929.webflow.css
+++ b/css/daddyowebsite1260929.webflow.css
@@ -33,7 +33,8 @@ h2 {
   text-transform: uppercase;
 }
 h3 {
-  margin: 0px 0px 6px;
+  margin: 0px;
+  padding-top: 28px;
   font-family: Bitter, serif;
   color: white;
   font-size: 20px;
@@ -63,7 +64,9 @@ h6 {
   font-weight: 700;
 }
 p {
+  margin-top: 0px;
   margin-bottom: 0px;
+  padding-top: 36px;
   font-family: Bitter, serif;
   color: #aaa;
   font-size: 18px;
@@ -94,6 +97,10 @@ p {
 }
 .button:active.mobile-button:active {
   background-color: #222;
+}
+.button.footer-button {
+  margin-top: 0px;
+  margin-bottom: 32px;
 }
 .header {
   position: static;
@@ -149,6 +156,7 @@ p {
 }
 .content-panel.padding {
   top: 0px;
+  margin-top: 1px;
   padding-bottom: 10px;
 }
 ._960 {
@@ -235,6 +243,7 @@ p {
 }
 .dark {
   margin-bottom: 40px;
+  padding-top: 1px;
   background-color: rgba(0, 0, 0, 0);
   color: rgba(0, 0, 0, 0.49);
 }
@@ -253,6 +262,21 @@ p {
   margin-bottom: 20px;
   color: #aaa;
   font-style: normal;
+  font-weight: 400;
+}
+.dark.italic {
+  padding-top: 16px;
+  font-style: italic;
+}
+.dark.press-release {
+  margin-bottom: 12px;
+  padding-top: 0px;
+  font-size: 15px;
+  font-weight: 400;
+}
+.dark.press-release.date {
+  margin-bottom: 12px;
+  padding-top: 0px;
   font-weight: 400;
 }
 .comic-strip {
@@ -291,7 +315,7 @@ p {
   background-color: rgba(0, 0, 0, 0);
 }
 .footer.mobile {
-  margin-top: 60px;
+  margin-top: 36px;
   padding-top: 0px;
   padding-bottom: 50px;
   border-top: 1px dashed #666;
@@ -323,6 +347,9 @@ p {
   padding-bottom: 30px;
   background-color: #b6be00;
 }
+.about-section.images {
+  padding-top: 0px;
+}
 .intro-text {
   padding: 30px 20px 40px 10px;
   color: rgba(0, 0, 0, 0.49);
@@ -331,7 +358,6 @@ p {
   font-style: normal;
 }
 .intro-text.phone {
-  margin-top: 50px;
   padding-top: 6px;
   padding-bottom: 30px;
   font-size: 24px;
@@ -389,6 +415,7 @@ p {
 }
 .mobile.feature-headings {
   margin-bottom: 2px;
+  padding-top: 0px;
 }
 .subheading {
   margin-top: 15px;
@@ -433,6 +460,8 @@ p {
 }
 .about.heading {
   margin-bottom: 8px;
+  padding-top: 0px;
+  padding-bottom: 0px;
   font-size: 30px;
 }
 .divider {
@@ -471,6 +500,90 @@ p {
 }
 .twitter-widget {
   margin-top: 6px;
+}
+.mid {
+  padding-bottom: 10px;
+  padding-left: 93px;
+}
+.bio.links {
+  font-family: Bitter, serif;
+  color: #a8a7a7;
+  font-size: 18px;
+  font-weight: 400;
+}
+.bio.sub {
+  padding-top: 3px;
+  color: #575757;
+  font-size: 16px;
+}
+.bio.grey {
+  margin-bottom: 46px;
+  padding-top: 46px;
+}
+.bio.heading {
+  margin-bottom: 1px;
+  padding-top: 0px;
+  padding-bottom: 32px;
+}
+.links.press-release {
+  margin-top: 0px;
+  margin-bottom: 0px;
+  padding-top: 0px;
+  padding-bottom: 0px;
+  font-family: Bitter, serif;
+  color: white;
+  font-size: 16px;
+}
+.link-area {
+  padding-top: 36px;
+  padding-left: 136px;
+}
+.images-section {
+  margin-bottom: 0px;
+  padding-bottom: 36px;
+  background-color: #b6be00;
+}
+.text-box {
+  padding-top: 6px;
+  padding-right: 16px;
+  padding-left: 16px;
+  border: 1px solid #969696;
+  border-radius: 8px;
+  background-color: white;
+  background-image: none;
+}
+.links-block {
+  padding-top: 16px;
+}
+.image-links {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  font-family: Bitter, serif;
+  color: #fffcfc;
+  line-height: 22px;
+}
+.image-row {
+  padding-top: 0px;
+  padding-bottom: 31px;
+}
+.press-kit-header {
+  margin-top: 0px;
+  padding-top: 21px;
+}
+.central {
+  height: 80px;
+  margin-bottom: 0px;
+  padding-bottom: 0px;
+}
+.right {
+  padding-left: 64px;
+}
+.phone {
+  padding-top: 0px;
+  line-height: 16px;
+}
+.mail {
+  line-height: 16px;
 }
 @media (max-width: 991px) {
   body {
@@ -843,5 +956,8 @@ p {
   }
   .smartphone.links {
     margin-bottom: 25px;
+  }
+  .mid {
+    padding-left: 5px;
   }
 }
