Press kit page added

--- a/css/daddyowebsite1260929.webflow.css
+++ b/css/daddyowebsite1260929.webflow.css
@@ -35,6 +35,7 @@ h2 {
 h3 {
   margin: 0px;
   padding-top: 28px;
+  padding-left: 0px;
   font-family: Bitter, serif;
   color: white;
   font-size: 20px;
@@ -44,8 +45,9 @@ h3 {
 }
 h4 {
   margin: 10px 0px;
-  font-size: 18px;
-  line-height: 24px;
+  font-family: Bitter, serif;
+  font-size: 24px;
+  line-height: 30px;
   font-weight: 700;
 }
 h5 {
@@ -81,7 +83,7 @@ p {
   padding: 12px 30px;
   float: left;
   border-radius: 4px;
-  background-color: #b6be00;
+  background-color: #b6bf00;
   font-family: Bitter, serif;
   color: white;
   font-size: 18px;
@@ -101,6 +103,15 @@ p {
 .button.footer-button {
   margin-top: 0px;
   margin-bottom: 32px;
+  float: left;
+  background-color: #b6bf00;
+}
+.button.presskit {
+  margin-bottom: 20px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  float: right;
+  background-color: #333;
 }
 .header {
   position: static;
@@ -268,10 +279,15 @@ p {
   padding-top: 16px;
   font-style: italic;
 }
+.dark.italic.apptext {
+  color: #949c00;
+}
 .dark.press-release {
   margin-bottom: 12px;
   padding-top: 0px;
-  font-size: 15px;
+  padding-left: 0px;
+  color: rgba(0, 0, 0, 0.49);
+  font-size: 16px;
   font-weight: 400;
 }
 .dark.press-release.date {
@@ -358,10 +374,10 @@ p {
   font-style: normal;
 }
 .intro-text.phone {
-  padding-top: 6px;
+  padding-top: 15px;
   padding-bottom: 30px;
   font-size: 24px;
-  line-height: 30px;
+  line-height: 32px;
 }
 .footer-link-cols {
   margin-top: 29px;
@@ -466,7 +482,9 @@ p {
 }
 .divider {
   height: 1px;
-  border: 1px dotted #666;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  border: 1px dashed #ccc;
 }
 .dark-block {
   height: auto;
@@ -501,9 +519,15 @@ p {
 .twitter-widget {
   margin-top: 6px;
 }
+.smartphone.links {
+  margin-right: 15px;
+  margin-bottom: 0px;
+  float: left;
+}
 .mid {
+  padding-right: 64px;
   padding-bottom: 10px;
-  padding-left: 93px;
+  padding-left: 64px;
 }
 .bio.links {
   font-family: Bitter, serif;
@@ -530,6 +554,7 @@ p {
   margin-bottom: 0px;
   padding-top: 0px;
   padding-bottom: 0px;
+  float: right;
   font-family: Bitter, serif;
   color: white;
   font-size: 16px;
@@ -544,9 +569,7 @@ p {
   background-color: #b6be00;
 }
 .text-box {
-  padding-top: 6px;
-  padding-right: 16px;
-  padding-left: 16px;
+  padding: 20px 25px;
   border: 1px solid #969696;
   border-radius: 8px;
   background-color: white;
@@ -569,6 +592,7 @@ p {
 .press-kit-header {
   margin-top: 0px;
   padding-top: 21px;
+  padding-left: 0px;
 }
 .central {
   height: 80px;
@@ -579,11 +603,21 @@ p {
   padding-left: 64px;
 }
 .phone {
-  padding-top: 0px;
+  padding-top: 35px;
   line-height: 16px;
 }
 .mail {
   line-height: 16px;
+}
+.italic {
+  margin-bottom: 15px;
+  padding-top: 0px;
+  padding-right: 30px;
+  padding-left: 0px;
+  color: #949c00;
+  font-size: 20px;
+  line-height: 32px;
+  font-style: italic;
 }
 @media (max-width: 991px) {
   body {
@@ -598,6 +632,10 @@ p {
   }
   .button.mobile-button {
     margin-top: 30px;
+  }
+  .button.presskit {
+    padding-right: 25px;
+    padding-left: 25px;
   }
   .header {
     width: 100%;
@@ -689,6 +727,18 @@ p {
   .mobiletext {
     padding-left: 0px;
   }
+  .mid {
+    padding-right: 30px;
+    padding-left: 30px;
+  }
+  .text-box {
+    padding-right: 24px;
+    padding-left: 24px;
+  }
+  .right {
+    padding-right: 0px;
+    padding-left: 0px;
+  }
 }
 @media (max-width: 767px) {
   .button {
@@ -699,6 +749,11 @@ p {
     padding-top: 18px;
     padding-bottom: 18px;
     font-size: 24px;
+  }
+  .button.presskit {
+    padding-top: 20px;
+    padding-bottom: 20px;
+    float: none;
   }
   .header {
     margin-right: auto;
@@ -738,6 +793,10 @@ p {
     width: 100%;
     margin-top: 10px;
   }
+  .intro-text.phone {
+    margin-top: 10px;
+    text-align: left;
+  }
   .daddyo-icon.mobile {
     display: block;
     margin-top: -40px;
@@ -758,9 +817,14 @@ p {
   }
   .subheading {
     display: block;
-    margin: 10px auto 20px;
+    margin-right: auto;
+    margin-bottom: 20px;
+    margin-left: auto;
     float: none;
     text-align: center;
+  }
+  .tom.mobile-pic {
+    margin-bottom: 25px;
   }
   .iq-content {
     margin-bottom: 31px;
@@ -781,8 +845,31 @@ p {
     font-size: 16px;
     text-align: center;
   }
+  .links.press-release {
+    margin-top: -100px;
+  }
+  .pr-header.touch {
+    padding-left: 15px;
+  }
+  .right {
+    padding-left: 0px;
+  }
+  .phone {
+    display: block;
+    margin-top: 20px;
+    margin-right: auto;
+    margin-left: auto;
+    text-align: center;
+  }
 }
 @media (max-width: 479px) {
+  h3 {
+    padding-right: 10px;
+  }
+  p {
+    padding-right: 10px;
+    padding-left: 10px;
+  }
   .button {
     width: 100%;
   }
@@ -791,6 +878,10 @@ p {
     padding: 12px 0px;
     font-size: 22px;
     line-height: 30px;
+  }
+  .button.presskit {
+    margin-top: 0px;
+    line-height: 20px;
   }
   .hero-area {
     padding-bottom: 30px;
@@ -872,10 +963,11 @@ p {
   }
   .intro-text.phone {
     margin-top: 0px;
-    padding-top: 25px;
+    padding-top: 0px;
     padding-left: 20px;
     font-size: 24px;
     line-height: 35px;
+    text-align: left;
   }
   .daddyo-icon.mobile {
     display: block;
@@ -889,6 +981,9 @@ p {
     margin-top: 4px;
     margin-right: auto;
     margin-left: auto;
+  }
+  .intro-text-box {
+    padding-right: 10px;
   }
   .intro-section.mobile {
     padding-right: 0px;
@@ -920,7 +1015,7 @@ p {
   }
   .subheading {
     display: block;
-    margin-top: 10px;
+    margin-top: 15px;
     margin-right: auto;
     margin-left: auto;
     line-height: 26px;
@@ -929,11 +1024,14 @@ p {
   .tom.mobile-pic {
     margin-bottom: 20px;
   }
+  .about.heading {
+    padding-left: 0px;
+  }
   .dark-block {
     margin-bottom: 30px;
   }
   .mobiletext {
-    padding-right: 20px;
+    padding-right: 5px;
     padding-left: 20px;
     font-size: 28px;
   }
@@ -958,6 +1056,38 @@ p {
     margin-bottom: 25px;
   }
   .mid {
-    padding-left: 5px;
+    padding-right: 20px;
+    padding-left: 20px;
+  }
+  .bio.links {
+    padding-left: 10px;
+  }
+  .links.press-release {
+    margin-top: 1px;
+    float: left;
+  }
+  .link-area {
+    padding-top: 16px;
+    padding-bottom: 16px;
+    padding-left: 0px;
+  }
+  .text-box {
+    padding-right: 16px;
+    padding-left: 16px;
+  }
+  .right {
+    padding-left: 10px;
+  }
+  .phone {
+    display: block;
+    margin-right: auto;
+    margin-bottom: 15px;
+    margin-left: auto;
+    padding-top: 24px;
+    text-align: center;
+  }
+  .mail {
+    padding-right: 10px;
+    padding-left: 10px;
   }
 }
